# booklet

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: calculate.rs  lib.rs  main.rs  rearrange.rs  reorder.rs
src/extra/: error.rs  lopdf.rs
