[package]
name = "booklet"
version = "0.1.0"
authors = ["David Baynard <davidbaynard@gmail.com>"]
description = "Rearrange pdf pages for booklet printing"
homepage = "https://github.com/dbaynard/booklet"
repository = "https://github.com/dbaynard/booklet"
readme = "README.md"
license = "BSD2"

[[bin]]
name = "pdfbooklet"
path = "src/main.rs"

[dependencies]
lopdf = "0.24.0"
num = "0.3.0"
num-derive = "0.3.0"
num-traits = "0.2.12"
structopt = "0.3.15"
structopt-derive = "0.4.8"

[dev-dependencies]
quickcheck = "0.9.2"
