[package]
name = "booklet"
version = "0.1.3"
authors = ["David Baynard <rust@baynard.dev>"]
description = "Rearrange pdf pages for booklet printing"
homepage = "https://github.com/dbaynard/booklet"
repository = "https://github.com/dbaynard/booklet"
readme = "README.md"
license = "BSD2"

[[bin]]
name = "pdfbooklet"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
lopdf = "0.27.0"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"

[dev-dependencies]
quickcheck = "1.0.3"
